legacy_versioned_docs/version-0.9/studio-guide/agent-configuration.mdx
---
sidebar_position: 6
tags:
    - LOC
    - Studio
    - Agentconfig
---

# Agent Configuration

:::info
In future releases the administration panel will only be accessed by authorised LOC Owners.
:::

**Agent Configuration** is part of the administration panel for creating and managing secrets for the following agents in [SDK](/legacy/0.9/category/sdk-reference):

-   [HTTP agent](/legacy/0.9/sdk-reference/http)
    -   Supports HTTP or HTTPS
    -   Can set authorization (None, Basic or Bear), custom headers and path prefix
-   [Database agent](/legacy/0.9/sdk-reference/database)
    -   Supports MSSQL, MySQL, Postgres or Oracle
    -   Can set the max connection count
    -   Additional parameters for specific types of databases
-   [File storage agent](/legacy/0.9/sdk-reference/filestorage)
    -   Supports FTP, Amazon S3 or SMB (Server Message Block)
-   [Mail agent](/legacy/0.9/sdk-reference/mail)
    -   Using a SMTP server

<div className="center-padded-sm">
    <img
        src={require("./img/agent-configuration.png").default}
        alt="agent-configuration"
    />
</div>

To create a configuration, first create a folder if there is none, then right-click the folder to create a new configuration. Once set, agents would be able to access these configurations by name.

<div className="center-padded-sm">
    <img
        src={require("./img/agent-configuration2.png").default}
        alt="agent-configuration2"
    />
</div>

:::warning
LOC will give you a waning if you try to delete an agent configuration that is referenced by at least one data process(es). **Continuing deleting such agent configuration will result those data processes unexecutable.**
:::

See [tutorial](/legacy/0.9/tutorials/http-agent-configuration) for how to create and use an agent configurations in your data processes.
